--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <html>
-
-<head>
+  <head>
     <title>Pacmen</title>
     <!-- DO NOT CHANGE THIS LINE OF CODE -->
     <script src="./Solution/pacmensolution.js"></script>
-</head>
+  </head>
 
-<body>
-    <div id='game'>
-        <button id="addBtn" onclick='makeOne()' width='200' height='30'>Add PacMan</button>
-        <button id="startBtn" onclick='update()' width='200' height='30'>Start Game</button>
-
+  <body>
+    <div id="game">
+      <button id="addBtn" onclick="makeOne()" width="200" height="30">
+        Add PacMan
+      </button>
+      <button id="startBtn" onclick="update()" width="200" height="30">
+        Start Game
+      </button>
     </div>
-</body>
-
+    <script src="/pacmen.js"></script>
+  </body>
 </html>
